--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #5e5e5e;
+  background-color: #c5e4f7;
   color: white;
 }
 
