--- a/style.css
+++ b/style.css
@@ -16,10 +16,10 @@ body {
 }
 
 .container {
-  border: 2px solid black;
+  border: 2px solid white;
   padding: 2rem;
   border-radius: 0.4rem;
-  box-shadow: 5px 5px 5px rgba(57, 57, 57, 0.794);
+  box-shadow: 5px 5px 5px rgba(69, 137, 226, 0.794);
 }
 
 h1 {
