--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 16px;
+  font-size: 20px;
+  font-weight: bold;  
   height: 100vh;
   width: 100%;
   display: flex;
@@ -42,6 +43,7 @@ button {
   font-size: 0.9rem;
   background-color: #007bff;
   color: white;
+  font-weight: bold;           
   border: none;
   border-radius: 0.4rem;
   cursor: pointer;
